tests/negative/test_mac_no_ret.orb
eval (mac foo () {});

fnc main () () {
    foo;
};